<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bottom_sheet_warning"
        android:textAlignment="center"
        android:textColor="@color/color_default"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider" />

    <TextView
        android:id="@+id/text_sheet_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/text_login_email_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:text="@string/text_btn_bottom_sheet"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/color_default" />

</LinearLayout>