<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar Layout da Tela de Login" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cont_btn_back"
                android:padding="8dp"
                android:src="@drawable/ic_back"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/btnEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnEdit"
                app:tint="@color/btn_back_card"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_delete"
                android:paddingHorizontal="8dp"
                android:text="@string/text_btn_delete"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@id/btnEdit"
                app:layout_constraintEnd_toStartOf="@id/btnEdit"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="@id/btnEdit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/color_default"
                android:paddingHorizontal="8dp"
                android:text="@string/text_btn_edit"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDetails"
                app:layout_constraintStart_toEndOf="@id/btnDelete"
                app:layout_constraintTop_toBottomOf="@id/textDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetails"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_details"
                android:paddingHorizontal="8dp"
                android:text="@string/text_btn_details"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@id/btnEdit"
                app:layout_constraintEnd_toStartOf="@id/btnNext"
                app:layout_constraintStart_toEndOf="@id/btnEdit"
                app:layout_constraintTop_toTopOf="@id/btnEdit" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cont_btn_next"
                android:padding="8dp"
                android:src="@drawable/ic_forward"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnEdit"
                app:tint="@color/color_default"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>